# issue-bazel-java-test-suite-filegroup

./: .bazeliskrc  .gitignore  .sdkmanrc  BUILD.bazel  MODULE.bazel  README.md
src/main/java/com/example/foo/: Foo.java
src/test/java/com/example/foo/: FirstTest.java  SecondTest.java
