""" Rules for the Java project
"""
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

filegroup(
    name="lib_srcs",
    srcs = glob(["src/main/java/**/*.java"]),
)

filegroup(
    name="test_srcs",
    srcs = glob(["src/test/java/**/*.java"]),
)

java_library(
    name = "lib",
    srcs = [":lib_srcs"],
)

java_library(
    name = "test_lib",
    srcs = [":test_srcs"],
    deps = [":lib"],
)

# NOTE(mike): Uncommenting this will cause *both* test cases to pass which is a strange phenomenon.
#java_test_suite(
#    name = "tests_glob",
#    srcs = glob(["src/test/java/**/*.java"]),
#    runner = "junit5",
#    deps = [
#        ":lib",
#        "@maven//:org_junit_jupiter_junit_jupiter",
#        "@maven//:org_junit_jupiter_junit_jupiter_api",
#        "@maven//:org_junit_platform_junit_platform_launcher",
#        "@maven//:org_junit_platform_junit_platform_reporting",
#        "@maven//:org_junit_platform_junit_platform_suite_api",
#    ],
#)

java_test_suite(
    name = "tests_filegroup",
    srcs = [":test_srcs"],
    runner = "junit5",
    deps = [
        ":lib",
        ":test_lib",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
)